reformat home add preview property

--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -1,12 +1,7 @@
+    <h2 class="f1 f-subheadline-l worksans mb4 mt0 accent">Our values</h2>
 <div class="  contain flex-l mb4 bg-accent">
   <div class="w-50-l bg-accent white pa3 pa4-l">
-    <h2 class="f1 f-subheadline-l worksans mb1 mt0">Our values</h2>
 
-
-    <p class="measure-wide f3 lh-copy white">Our core values reflect our approach in cultivating respectful and democratic technology ecologies. <br><br> We bring this ethos to every project we undertake.</p>
-  </div>
-
-  <div class="w-50-l bl b--white ma5 pl4 bw0 ">
     <div class="measure-wide">
     <h3 class="measure-wide mb0 white b normal f2  lh-solid">Curiosity</h3>
     <h3 class="measure-wide mb0 white b normal f2  lh-solid">Intersectionality</h3>
@@ -14,4 +9,11 @@
     <h3 class="measure-wide mb0 white b normal f2  lh-solid">Self-Agency</h3>
     <h3 class="measure-wide mb0 white b normal f2  lh-solid">Solidarity</h3>
   </div>
+
+  </div>
+
 </div>
+<div class="  contain flex-l mb4  pa3 pa4-l ph0 ph0-l">
+    <p class="measure f3 lh-copy ">Our core values reflect our approach in cultivating respectful and democratic technology ecologies. <br><br> We bring this ethos to every project we undertake.</p>
+    <div class="w-100 bg-accent"></div>
+  </div>
