--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,17 +1,15 @@
-<div class="pa4 pr0">
+<div class=" pr0 mb5">
   <h2 class="f1 f-subheadline-l worksans accent mb1-l mt0-l">Who we are</h2>
   <div class="flex-l items-start contain bg-left aliased pv4-m pv4-l ">
-    <div class="w-50-l pr5 pl3">
+    <div class="w-50-l pr5 pl0">
       
       
-      <div class="mb0  normal f3  lh-copy  measure-wide bg-white ">
-        <p class="mv0">
+      <p class="f3  lh-copy  measure-wide bg-white ">
       We are a team of technologists, designers, and community organizers who value working with mission-oriented partners.
-      </p>
-      <p>
+        <br/>
+        <br/>
         Together, we have years of experience building open source technologies and sustainable communities.
-      </p>
-      </div>
+    </p>
 
 
   <!-- <div class="flex flex-wrap mb4">
@@ -20,8 +18,7 @@
         <img src="{{person.avatar }}" class="br-100 h3 w3 pa3 pl0 dib" title="Photo of a kitty staring at you">
     {% endfor %}
   </div> -->
-      <p class="measure-wide f4 f3-l lh-copy dark-gray bg-white">
-      </p> </div>
+      </div>
     <div class="w-50-l h5 bg-accent">
       <!-- <figure class="ma0 relative"> -->
         <!-- <img class="db" src="/assets/images/scaling-1.png" alt="Photo by Caleb George on Unsplash"> -->
