--- a/_includes/sections/join-the-team.html
+++ b/_includes/sections/join-the-team.html
@@ -1,17 +1,22 @@
 <div class="flex-l items-center mv2 pa4">
-  <div class="w-75-l">
+  <div class="w-100-l">
     <h2 class="f1 f-subheadline-l worksans accent mb1">Join the team</h2>
 
-    <h3 class="f3 f2-l normal lh-solid measure dark-gray worksans">Find out more about open positions and pathways to membership</h3>
-    <dl class="dib mr5">
-      <dt class="mb3 mt0 f3"><strong>View our job postings</strong></dt>
-      <dd class="ml0"><a class="accent f3 link underline-hover" href="tel:{{ site.phone | | remove: ' ' | remove: '-' }}">LinkedIn</a></dd>
-    </dl>
-    <dl class="dib mr5">
-      <dt class="mb3 mt0 f3"><strong>Our membership policies</strong></dt>
-      <dd class="ml0"><a class="accent f3 link underline-hover" href="mailto:{{ site.email-hidden }}">Handbook</a></dd>
-    </dl>
+    <h3 class="f3 mb5 f2-l normal lh-solid measure-narrow dark-gray worksans">Find out more about open positions and pathways to membership</h3>
+    
+    <h3 class="mb3 mt0 f3">View our job openings</h3>
+    <div class="w-100 flex flex-wrap mb4">
+    {% for opening in site.openings %}
+    <div class="measure pr5">
+      <p class="accent link f3 mv3"> {{ opening.title }} </p>
+      <div class="f4 lh-copy "> {{ opening.excerpt }} </div>
+      <p class="f5"><i> Posted on {{ opening.prepared-on-date }} </i></p>
+    </div>
+    {% endfor %}
+  </div>
 
+    <h3 class="mb3 mt0 f3">Read our membership policies</h3>
+      <p class="ml0 f3 pv2"><a class="accent f3 link underline-hover" href="mailto:{{ site.email-hidden }}">Handbook</a></p>
     <h4 class="f4 f3-l normal"><span class="accent">⚑</span> Hypha is rooted in Tkaronto (Toronto), Canada.</h4>
   </div>
 
