--- a/_includes/sections/join-the-team.html
+++ b/_includes/sections/join-the-team.html
@@ -1,4 +1,4 @@
-<div class="flex-l items-center mv2 pa4">
+<div class="flex-l items-center mv2 ">
   <div class="w-100-l">
     <h2 class="f1 f-subheadline-l worksans accent mb1">Join the team</h2>
 
