--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -9,8 +9,8 @@
       <h3 class="measure-wide mb0 white b normal f2  lh-solid">Solidarity</h3>
     </div>
   </div>
-  <p class="measure f3 lh-copy pl5-l">Our core values reflect our approach in cultivating respectful and democratic technology ecologies. <br><br> We bring this ethos to every project we undertake.</p>
+  <p class="measure f3 lh-copy pl3 ml5-l">Our core values reflect our approach in cultivating respectful and democratic technology ecologies. <br><br> We bring this ethos to every project we undertake.</p>
 </div>
-<div class="  contain flex-l mb4  pa3 pa4-l ph0 ph0-l">
+<div class="  contain flex-l mb4  pa3 pa4-l ph0 ph4-l">
   <div class="w-100 bg-accent"></div>
 </div>
