Remove `worksans` class in favour of Tachyons setting
- Website now uses the default Tachyons `sans-serif` class for font settings as defined in tachyons' _variables.scss file.

- Removed `worksans` class from _hypha.scss

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,6 +1,6 @@
 <div class="flex-l items-center mv2">
   <div class="w-100-l">
-    <h3 class="measure-wide f2 f1-m f-subheadline-l measure-narrow lh-title accent normal worksans">
+    <h3 class="measure-wide f2 f1-m f-subheadline-l measure-narrow lh-title accent normal sans-serif">
       Hypha collaborates with communities to build better relationships with technology.
     </h3>
   </div>
