--- a/_includes/sections/our-values-independent.html
+++ b/_includes/sections/our-values-independent.html
@@ -1,4 +1,4 @@
-    <h2 class="f1 f-subheadline-l worksans mb4 mt0 accent">Our values</h2>
+    <h2 class="f1 f-subheadline-l sans-serif mb4 mt0 accent">Our values</h2>
 <div class="  contain flex-l mb4 bg-accent">
   <div class="w-50-l bg-accent white pa3 pa4-l">
 
