--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -1,4 +1,4 @@
-<h2 class="f1 f-subheadline-l worksans accent ma0 mb4">What we do</h2>
+<h2 class="f1 f-subheadline-l sans-serif accent ma0 mb4">What we do</h2>
 <div class="bg-accent white pa4-l pa3 contain bg-right aliased  flex flex-column mb5">
   <div class="flex">
     <div class="w-50-l w-100">
