--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,5 +1,5 @@
 <div class=" pr0 mb5">
-  <h2 class="f1 f-subheadline-l worksans accent mb1-l mt0-l">Who we are</h2>
+  <h2 class="f1 f-subheadline-l sans-serif accent mb1-l mt0-l">Who we are</h2>
   <div class="flex-l items-start contain bg-left aliased pv4-m pv4-l ">
     <div class="w-50-l pr5 pl0">
       
