--- a/_sass/tachyons-sass/scss/_variables.scss
+++ b/_sass/tachyons-sass/scss/_variables.scss
@@ -1,7 +1,7 @@
 
 // Converted Variables
 
-$sans-serif: -apple-system, BlinkMacSystemFont, 'avenir next', avenir, helvetica, 'helvetica neue', ubuntu, roboto, noto, 'segoe ui', arial, sans-serif !default;
+$sans-serif: 'WorkSans', -apple-system, BlinkMacSystemFont, 'avenir next', avenir, helvetica, 'helvetica neue', ubuntu, roboto, noto, 'segoe ui', arial, sans-serif !default;
 $serif: georgia, serif !default;
 $code: consolas, monaco, monospace !default;
 $font-size-headline: 6rem !default;
