--- a/_includes/sections/header.html
+++ b/_includes/sections/header.html
@@ -1,4 +1,4 @@
-<div class="flex worksans">
+<div class="flex sans-serif">
   <div class="w-100">
     <a href="{{ "/" | relative_url }}" class="flex no-underline"><h1 class="f5 f3-ns ttu ma0 accent">Hypha</h1><h2 class="ml2 gray f5 f3-ns normal ma0">Worker Co-operative</h2></a>
   </div>
@@ -12,4 +12,4 @@
   <a class="accent link underline-hover" href="mailto:{{ site.email-hidden }}">{{ site.email }}</a>
 </div>
 
-<a href="#menu" aria-label="Open menu" class="dn-l f5 f3-ns link underline-hover accent worksans">Menu</a>
+<a href="#menu" aria-label="Open menu" class="dn-l f5 f3-ns link underline-hover accent sans-serif">Menu</a>
