--- a/_includes/sections/join-the-team.html
+++ b/_includes/sections/join-the-team.html
@@ -1,8 +1,8 @@
 <div id="openings" class="flex-l items-center mv2 ">
   <div class="w-100-l">
-    <h2 class="f1 f-subheadline-l worksans accent mb1">Join the team</h2>
+    <h2 class="f1 f-subheadline-l sans-serif accent mb1">Join the team</h2>
 
-    <h3 class="f3 mb5 f2-l normal lh-solid measure-narrow dark-gray worksans">Find out more about open positions and pathways to membership</h3>
+    <h3 class="f3 mb5 f2-l normal lh-solid measure-narrow dark-gray sans-serif">Find out more about open positions and pathways to membership</h3>
     
     <h3 class="mb3 mt0 f3">View our job openings</h3>
     <div class="w-100 flex flex-wrap mb4">
