--- a/_includes/sections/work-with-us.html
+++ b/_includes/sections/work-with-us.html
@@ -1,8 +1,8 @@
 <div class="flex-l items-center mv2 ">
   <div class="w-75-l">
-    <h2 class="f1 f-subheadline-l worksans accent mb1">Work with us</h2>
+    <h2 class="f1 f-subheadline-l sans-serif accent mb1">Work with us</h2>
 
-    <h3 class="f3 f2-l normal lh-solid measure dark-gray worksans">We would love to hear from you about new projects, partnerships, and collaborations.</h3>
+    <h3 class="f3 f2-l normal lh-solid measure dark-gray sans-serif">We would love to hear from you about new projects, partnerships, and collaborations.</h3>
     <dl class="dib mr5">
       <dt class="mb3 mt0 f3"><strong>Telephone</strong></dt>
       <dd class="ml0"><a class="accent f3 link underline-hover" href="tel:{{ site.phone | | remove: ' ' | remove: '-' }}">{{ site.phone }}</a></dd>
