--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -1,6 +1,6 @@
 <div class="flex-l items-baseline">
   <div class="w-100 w-50-l pr5">
-    <p class="f3 f4-l lh-copy">{{ site.footer }}</p>
+    <p class="f3 f4-l fw7 lh-copy dark-gray">{{ site.footer }}</p>
     <p class="f6 f5-l lh-copy">Data and privacy policies are in our handbook: <a href="https://handbook.hypha.coop/data.html" target="_blank" class="accent link underline-hover" rel="noopener">How We Use Data</a> and <a href="https://handbook.hypha.coop/working-open.html" target="_blank" class="accent link underline-hover" rel="noopener">Working Open</a>.</p>
     <p class="f6 f5-l lh-copy">
       This site is published using <a href="https://distributed.press/" target="_blank" class="accent link underline-hover" rel="noopener">Distributed Press</a>.
