--- a/_includes/sections/work-with-us.html
+++ b/_includes/sections/work-with-us.html
@@ -5,14 +5,14 @@
     <h3 class="f3 f2-l normal lh-solid measure dark-gray sans-serif">We would love to hear from you about new projects, partnerships, and collaborations.</h3>
     <dl class="dib mr5">
       <dt class="mb3 mt0 f3"><strong>Telephone</strong></dt>
-      <dd class="ml0"><a class="accent f3 link underline-hover" href="tel:{{ site.phone | | remove: ' ' | remove: '-' }}">{{ site.phone }}</a></dd>
+      <dd class="ml0"><a class="accent f4 link underline-hover" href="tel:{{ site.phone | | remove: ' ' | remove: '-' }}">{{ site.phone }}</a></dd>
     </dl>
     <dl class="dib mr5">
       <dt class="mb3 mt0 f3"><strong>Email</strong></dt>
-      <dd class="ml0"><a class="accent f3 link underline-hover" href="mailto:{{ site.email-hidden }}">{{ site.email }}</a></dd>
+      <dd class="ml0"><a class="accent f4 link underline-hover" href="mailto:{{ site.email-hidden }}">{{ site.email }}</a></dd>
     </dl>
 
-    <h4 class="f4 f3-l normal"><span class="accent">⚑</span> Hypha is rooted in Tkaronto (Toronto), Canada.</h4>
+    <h4 class="f4 normal"><span class="accent">⚑</span> Hypha is rooted in Tkaronto (Toronto), Canada.</h4>
   </div>
 
 </div>
