Fix liquid syntax

--- a/_layouts/openings/opening.html
+++ b/_layouts/openings/opening.html
@@ -7,7 +7,7 @@ layout: default
     <a class="sans-serif link underline-hover accent" title="Return to Openings" href="/people#openings">← Openings</a>
   </div>
   <header class="mb4">
-    <h1 class="f1 f-subheadline-l sans-serif lh-solid mb3 mt0-l">{{ title }</h1>
+    <h1 class="f1 f-subheadline-l sans-serif lh-solid mb3 mt0-l">{{ title }}</h1>
   </header>
   <div class="lh-copy mw7 links-accent links-underline-hover">{{ content }}</div>
   <footer class="mt5 bt bw2 b--light-gray">
