--- a/_layouts/openings/opening.html
+++ b/_layouts/openings/opening.html
@@ -11,6 +11,6 @@ layout: default
   </header>
   <div class="lh-copy mw7 links-accent links-underline-hover">{{ content }}</div>
   <footer class="mt5 bt bw2 b--light-gray">
-    <p><a class="sans-serif link underline-hover accent" title="Return to Openings" href="/people#openings">← Openings</a></p>
+    <p><a class="sans-serif link underline-hover accent" title="Return to Openings" href="/people#openings">Openings</a></p>
   </footer>
 </section>
