--- a/_includes/sections/work-preview.html
+++ b/_includes/sections/work-preview.html
@@ -4,7 +4,7 @@
     <div class="flex flex-between">
         {% assign works = site.work | where: 'preview', 'true' | sort: 'order' %}
         {% for work in works | where: 'preview', 'true' %}
-            <div class="w-33 flex-column justify-left items-left mr4 mb2 tl pa3 pl0">
+            <div class="w-33 flex-column justify-left items-left center pr4 pl4 mb2 tl">
                 <div class="w-100 h4 pv3 tl pl3 white bg-accent">Logo</div>
                 <h2 class="f3 sans-serif accent">{{ work.title }}</h2>
                 <div class="pb3 f4 lh-copy">{{ work.excerpt | markdownify }}</div>
