make values clickable

--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -10,18 +10,21 @@
 </div>
 <div class="flex flex-wrap">
 
-  
-
   <ul id="values" class="measure-narrow f3 mr4">
     {% for element in page.what_we_do %}
-    <li class="pa3  accent "><a  id="{{ element.title }}" onclick="selectValue(this.id);" >{{ element.title }} </a></li>
+      <li class="pa3  accent "  id="{{ element.title }}" onclick="selectValue(this.id);" >
+        {{ element.title }} 
+      </li>
     {% endfor %}
   </ul>
-    {% for element in page.what_we_do %}
-  <p id="{{ element.title }}-description" class="measure ">
-  {{ element.description }}
-  </p>
+  <ul id="values-descriptions">
+  {% for element in page.what_we_do %}
+    <p id="{{ element.title }}-description" class="measure ">
+      {{ element.description }}
+    </p>
   {% endfor %}
+  </ul>
+
 </div>
 
 
@@ -69,16 +72,18 @@
       //make only the first card visible initially
     const testing = "{{ page.what_we_do[0].title }}";
     makeVisible(testing);
+    makePurple(testing);
     }
 
     initialState()
 
     function makePurple(id) {
       const purpleElement = document.getElementById(`${id}`)
-      console.log(purpleElement);
-      const allValuesClass = purpleElement.className;
-      console.log(allValuesClass);
-      document.querySelectorAll(`.${allValuesClass}`).forEach(function(el) {
+      // console.log(purpleElement);
+      // const allValuesClass = purpleElement.className;
+      // console.log(allValuesClass);
+      document.querySelectorAll("#values >  li").forEach(function(el) {
+        console.log(el);
         el.className = 'pa3 accent';
       });
       purpleElement.className = "pa3 bg-accent white";
