--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -1,16 +1,38 @@
-<div class="  contain flex-l mb4 ">
-  <div class="w-50-l bg-accent  white pa3 pa5-l">
-
-    <div class="measure-wide bg-accent">
-      <h3 class="measure-wide mv0 white b normal f2  lh-solid">Curiosity</h3>
-      <h3 class="measure-wide mb0 white b normal f2  lh-solid">Intersectionality</h3>
-      <h3 class="measure-wide mb0 white b normal f2  lh-solid">Honesty</h3>
-      <h3 class="measure-wide mb0 white b normal f2  lh-solid">Self-Agency</h3>
-      <h3 class="measure-wide mb0 white b normal f2  lh-solid">Solidarity</h3>
-    </div>
+    <h2 class="f1 f-subheadline-l sans-serif mb4 mt0 accent">Our values</h2>
+<div class="  contain flex-l mb4  pa3 pa4-l ph0 ph0-l">
+    <p class="measure f3 lh-copy ">Our core values reflect our approach in cultivating respectful and democratic technology ecologies. <br><br> We bring this ethos to every project we undertake.</p>
+    <div class="w-100 bg-accent"></div>
   </div>
-  <p class="measure f3 lh-copy pl3 ml5-l">Our core values reflect our approach in cultivating respectful and democratic technology ecologies. <br><br> We bring this ethos to every project we undertake.</p>
+<div class="  contain flex-l mb4 bg-accent">
+  <div class="w-50-l bg-accent white pa3 pa4-l">
+
+    <div class="measure-wide">
+    <h3 class="measure-wide mb0 white b normal f2  lh-solid">Curiosity</h3>
+    <h3 class="measure-wide mb0 white b normal f2  lh-solid">Intersectionality</h3>
+    <h3 class="measure-wide mb0 white b normal f2  lh-solid">Honesty</h3>
+    <h3 class="measure-wide mb0 white b normal f2  lh-solid">Self-Agency</h3>
+    <h3 class="measure-wide mb0 white b normal f2  lh-solid">Solidarity</h3>
+  </div>
+
+  </div>
+
 </div>
-<div class="  contain flex-l mb4  pa3 pa4-l ph0 ph4-l">
-  <div class="w-100 bg-accent"></div>
+<div class="flex flex-wrap">
+
+  <ul id="values" class="measure-narrow f3 mr4">
+    {% for element in page.values %}
+      <li class="pa3  accent "  id="{{ element.title }}" onclick="selectValue(this.id, 'values');" >
+        {{ element.title }} 
+      </li>
+    {% endfor %}
+  </ul>
+  <ul id="values-descriptions">
+  {% for element in page.values %}
+    <p id="{{ element.title }}-description" class="measure f3 lh-copy">
+      {{ element.description }}
+    </p>
+  {% endfor %}
+  </ul>
+
 </div>
+
