--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -19,41 +19,11 @@
   </ul>
   <ul id="what-descriptions">
   {% for element in page.what_we_do %}
-    <p id="{{ element.title }}-description" class="measure f3">
+    <p id="{{ element.title }}-description" class="measure f3 lh-copy">
       {{ element.description }}
     </p>
   {% endfor %}
   </ul>
 
 </div>
-
-
-<p class="mb3">old</p>
-<p class="mb3">old</p>
-<p class="mb3">old</p>
-<p class="mb3">old</p>
-<div class="bg-accent white pa4-l pa3 contain bg-right aliased  flex flex-column mb5">
-  <div class="flex">
-    <div class="w-50-l w-100">
-      <div class="flex flex-wrap ph3 pr4-l bg-accent">
-        <h3 class="f2 ma2 lh-copy">Decentralized web and blockchain-based technologies 
-          <p>Peer-to-peer protocols</p>
-          <p>Technical capacity development for co-operatives and collectives</p> 
-          <p>Governance of co-ops and decentralized digital communities</p>
-        </h3>
-      </div>
-    </div>  
-    <div class="w-50-l w-100-m">
-    </div>
-  </div>
-</div>
-<div class="  pa4-l pa3 ph0 ph0-l contain bg-right aliased  flex  mb5">
-<p class="lh-copy f3 pr5 w-50">
-      We propagate community-led stewardship, grow technical capacity, and deliver concepts and products.
-<br/>
-<br/>
-        Our expertise spans ideation to infrastructure.
-</p>
-        <div class="w-50 bg-accent"></div>
-  </div>
 
