--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -1,25 +1,12 @@
     <h2 class="f1 f-subheadline-l sans-serif mb4 mt0 accent">Our values</h2>
 <div class="  contain flex-l mb4  pa3 pa4-l ph0 ph0-l">
-    <p class="measure f3 lh-copy ">Our core values reflect our approach in cultivating respectful and democratic technology ecologies. <br><br> We bring this ethos to every project we undertake.</p>
-    <div class="w-100 bg-accent"></div>
-  </div>
-<div class="  contain flex-l mb4 bg-accent">
-  <div class="w-50-l bg-accent white pa3 pa4-l">
-
-    <div class="measure-wide">
-    <h3 class="measure-wide mb0 white b normal f2  lh-solid">Curiosity</h3>
-    <h3 class="measure-wide mb0 white b normal f2  lh-solid">Intersectionality</h3>
-    <h3 class="measure-wide mb0 white b normal f2  lh-solid">Honesty</h3>
-    <h3 class="measure-wide mb0 white b normal f2  lh-solid">Self-Agency</h3>
-    <h3 class="measure-wide mb0 white b normal f2  lh-solid">Solidarity</h3>
+    <p class="measure f4 lh-copy ">Our core values reflect our approach in cultivating respectful and democratic technology ecologies. <br><br> We bring this ethos to every project we undertake.</p>
+    <div class="w-100 bg-accent white pa5">illustration</div>
   </div>
 
-  </div>
-
-</div>
 <div class="flex flex-wrap">
 
-  <ul id="values" class="measure-narrow f3 mr4">
+  <ul id="values" class="measure-narrow f4 mr4">
     {% for element in page.values %}
       <li class="pa3  accent "  id="{{ element.title }}" onclick="selectValue(this.id, 'values');" >
         {{ element.title }} 
@@ -28,7 +15,7 @@
   </ul>
   <ul id="values-descriptions">
   {% for element in page.values %}
-    <p id="{{ element.title }}-description" class="measure f3 lh-copy">
+    <p id="{{ element.title }}-description" class="measure f4 lh-copy">
       {{ element.description }}
     </p>
   {% endfor %}
