--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -1,25 +1,25 @@
 <h2 class="f1 f-subheadline-l sans-serif accent ma0 mb4">What we do</h2>
 <div class="flex flex-wrap">
-  <p class="lh-copy f3 w-50 mt0">
+  <p class="lh-copy f4 w-50 mt0">
     We propagate community-led stewardship, grow technical capacity, and deliver concepts and products.
   <br/>
   <br/>
     Our expertise spans ideation to infrastructure.
   </p>
-  <div class="bg-accent w-50"></div>
+  <div class="bg-accent w-50 white pa5">illustration</div>
 </div>
 <div class="flex flex-wrap">
 
-  <ul id="what" class="measure-narrow f3 mr4">
+  <ul id="what_we_do" class="measure-narrow f4 mr4">
     {% for element in page.what_we_do %}
-      <li class="pa3  accent "  id="{{ element.title }}" onclick="selectValue(this.id, 'what');" >
+      <li class="pa3  accent "  id="{{ element.title }}" onclick="selectValue(this.id, 'what_we_do');" >
         {{ element.title }} 
       </li>
     {% endfor %}
   </ul>
-  <ul id="what-descriptions">
+  <ul id="what_we_do-descriptions">
   {% for element in page.what_we_do %}
-    <p id="{{ element.title }}-description" class="measure f3 lh-copy">
+    <p id="{{ element.title }}-description" class="measure f4 lh-copy">
       {{ element.description }}
     </p>
   {% endfor %}
