format who we are

--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,29 +1,19 @@
 <div class=" pr0 mb5">
   <h2 class="f1 f-subheadline-l sans-serif accent mb1-l mt0-l">Who we are</h2>
-  <div class="flex-l items-start contain bg-left aliased pv4-m pv4-l h-100">
-    <div class="w-50-l pr5 pl0 flex flex-column justify-between h-100">
-      
-      
-      <p class="f4 lh-copy measure-wide bg-white ">
+  
+  <container class="flex justify-between">
+    <div class="flex flex-column justify-between measure-wide">
+        <div> <p class="f4 lh-copy   ">
       We are a team of technologists, designers, and community organizers who value working with mission-oriented partners.
         <br/>
         <br/>
         Together, we have years of experience building open source technologies and sustainable communities.
-    </p>
-      <p class="f4 v-btm">Read more about <a class="link accent" href="/people/">Our Team</a></p>
-
-  <!-- <div class="flex flex-wrap mb4">
-      
-    {% for person in site.people %}
-        <img src="{{person.avatar }}" class="br-100 h3 w3 pa3 pl0 dib" title="Photo of a kitty staring at you">
-    {% endfor %}
-  </div> -->
-      </div>
-    <div class="w-50-l h5">
-      <figure class="ma0 relative">
-        <img class="db" src="/assets/images/mushroom.jpg"></img>
-        <!-- <figcaption class="absolute bottom-2-l bottom-1 left-1 left-2-l f6-l f7 white">Photo by Caleb George on Unsplash</figcaption> -->
-      </figure>
+    </p> </div>
+        <div>
+          
+      <p class="f4 ">Read more about <a class="link accent" href="/people/">Our Team</a></p>
+        </div>
     </div>
-  </div>
+        <img  class="w-50" src="/assets/images/mushroom.jpg"></img>
+  </container>
 </div>
