--- a/_sass/_hypha.scss
+++ b/_sass/_hypha.scss
@@ -85,3 +85,33 @@ mark {
   }
 }
 
+// Section templates
+
+//for section headers 
+h1 {
+  @extend .f2;
+  @extend .f1-m;
+  @extend .f-subheadline-l;
+  @extend .accent;
+  @extend .normal;
+  @extend .sans-serif;
+  @extend .mb4;
+  @extend .lh-solid;
+}
+
+h2 {
+  @extend .f1;
+  @extend .f-subheadline-l;
+  @extend .sans-serif;
+  @extend .accent;
+  @extend .ma0;
+  @extend .mb4;
+  // border: 1px solid black;
+}
+
+p {
+  @extend .lh-copy;
+  @extend .f4;
+  // border: 1px dotted black;
+}
+
