--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -1,7 +1,9 @@
-<header>
+
+<div class="flex flex-wrap justify-between lh-copy f3">
+<div><header>
+
   <h2 class="">What we do</h2>
 </header>
-<div class="flex flex-wrap justify-between lh-copy f3">
   <p class="lh-copy f4 measure mt0">
     We propagate community-led stewardship, grow technical capacity, and deliver
     concepts and products.
@@ -9,25 +11,28 @@
     <br />
     Our expertise spans ideation to infrastructure.
   </p>
+</div>
   <figure class="bg-accent br-100 white pa5">illustration</figure>
 </div>
 <div class="flex flex-wrap">
-  <ul id="what_we_do" class="measure-narrow f4 mr4">
+  <ul id="what_we_do" class="measure-narrow f4 mr4 pl0">
     {% for element in page.what_we_do %}
-    <li
-      class="pa3 accent"
+    <div
+      class="ma3 accent pointer"
       id="{{ element.title }}"
       onclick="selectValue(this.id, 'what_we_do');"
     >
+    <li >
       {{ element.title }}
     </li>
+  </div>
     {% endfor %}
   </ul>
-  <ul id="what_we_do-descriptions">
+  <div id="what_we_do-descriptions">
     {% for element in page.what_we_do %}
     <p id="{{ element.title }}-description" class="measure f4 lh-copy">
       {{ element.description }}
     </p>
     {% endfor %}
-  </ul>
+  </div>
 </div>
