--- a/_sass/tachyons-sass/_tachyons.scss
+++ b/_sass/tachyons-sass/_tachyons.scss
@@ -38,7 +38,7 @@
 // @import 'scss/debug-grid';
 
 //  Uncomment out the line below to help debug layout issues 
-//  @import 'scss/debug'; 
+ @import 'scss/debug'; 
 
  //  Modules 
  @import 'scss/box-sizing';
