--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -1,9 +1,9 @@
 <div class="  contain flex-l justify-between mb4  pa3 pa4-l ph0 ph0-l">
-    <div>
+    <div class="measure-wide">
     <h2 class="f1 f-subheadline-l sans-serif mb4 mt0 accent">Our values</h2>
     <p class="measure f4 lh-copy ">Our core values reflect our approach in cultivating respectful and democratic technology ecologies. <br><br> We bring this ethos to every project we undertake.</p>
     </div>
-    <figure class=" bg-accent white pa5 br-100">illustration</figure>
+    <div class="w-50 scaling-3 " ></div>
   </div>
 
 <div class="flex flex-wrap">
