--- a/_sass/_hypha.scss
+++ b/_sass/_hypha.scss
@@ -115,6 +115,11 @@ p {
   // border: 1px dotted black;
 }
 
+a {
+  @extend .accent;
+  @extend .link;
+  @extend .underline-hover;
+}
 
 #what_we_do div.accent:hover, #values div.accent:hover {
   background-color: lighten($accent-color, 45%);
