--- a/_includes/sections/team-bios.html
+++ b/_includes/sections/team-bios.html
@@ -4,7 +4,7 @@
     <div class="flex">
       <!-- <img src="{{ person.avatar }}" -->
        <!-- class="br-100 h5 w5 dib" title="Photo of a kitty staring at you"> -->
-       <div class="h4 w4 bg-accent"></div>
+       <div class="h4 w4 bg-accent tc white f3 v-mid pt4">avatar</div>
       <div class="pl4 w-50 pt0 pt0-l">
       <div class="f3 lw-5 accent pt0 pt0-l lh-title pb1">
         <b>{{ person.name }}</b>
