add alt for mushrooms

--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -14,6 +14,6 @@
       <p class="f4 ">Read more about <a class="link accent" href="/people/">Our Team</a></p>
         </div>
     </div>
-        <img  class="w-50" src="/assets/images/mushroom.jpg"></img>
+        <img  class="w-50" src="/assets/images/mushroom.jpg" alt="mushroom x-rays"></img>
   </container>
 </div>
