simplify unify formatting

--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -1,4 +1,4 @@
-<div class="contain flex-l justify-start  mb4 pa3 pa4-l ph0 ph0-l">
+<div class="contain flex-l justify-start  mb4 ">
   <div class="measure-wide mr5">
     <h2 class="f1 f-subheadline-l sans-serif mb4 mt0 accent">Our values</h2>
     <p class="measure f4 lh-copy">
