--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -1,10 +1,8 @@
 <div class="flex  justify-start lh-copy f3 mb4">
   <div class="mr3">
-    <header>
       <h2 class="">What we do</h2>
-    </header>
     <p class="lh-copy f4 measure mt0">
-      We propagate community-led stewardship, grow technical capacity, and
+      We propagate community-led stewardship, grow technical capacities, and
       deliver concepts and products.
       <br />
       <br />
